# Wasm-on-PSP-Demo

./: CMakeLists.txt  Readme.md  build.sh
src/: app.c  app.h  main.c
tinygo/: app.wasm  go.mod  main.go  target.json
tinygo/raylib-go/raylib/: go.mod  platform_desktop_sdl.go
w2c2/wasi/: wasi.c
